--- a/index.ipynb
+++ b/index.ipynb
@@ -95,17 +95,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def attendance_with_friends(advertising):\n",
-    "    y = 1.5*advertising + 20"
+    "    y = 1.5*advertising + 20\n",
+    "    return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
