--- a/index.ipynb
+++ b/index.ipynb
@@ -264,27 +264,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
     "    y_values = list(map(lambda x : m*x+b, x_values))\n",
-    "    return {'x' : x_values, 'y'y_values"
+    "    return {'x' : x_values, 'y' : y_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[20.0, 95.0, 170.0]"
+       "{'x': [0, 50, 100], 'y': [20.0, 95.0, 170.0]}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
