Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -809,7 +809,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# trace_show_line = m_b_trace(show_starting_line['m'], show_starting_line['b'], show_x_values, name = 'starting line')"
+    "trace_show_line = m_b_trace(show_starting_line['m'], show_starting_line['b'], show_x_values, name = 'starting line')"
    ]
   },
   {
@@ -818,7 +818,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# trace_show_line"
+    "trace_show_line"
    ]
   },
   {
@@ -827,7 +827,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot([comedy_show_trace, trace_show_line])"
+    "plot([comedy_show_trace, trace_show_line])"
    ]
   },
   {
