Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,18 +839,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [200, 400, 300, 600],\n",
+       " 'y': [400.0, 650.0, 525.0, 900.0],\n",
+       " 'mode': 'lines',\n",
+       " 'name': 'starting line'}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trace_show_line"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "markers",
+         "name": "comedy show data",
+         "type": "scatter",
+         "uid": "6b548b6a-ca12-11e9-818b-8b584f91532b",
+         "x": [
+          200,
+          400,
+          300,
+          600
+         ],
+         "y": [
+          400,
+          700,
+          500,
+          900
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "starting line",
+         "type": "scatter",
+         "uid": "6b548e62-ca12-11e9-818b-8b584f91532b",
+         "x": [
+          200,
+          400,
+          300,
+          600
+         ],
+         "y": [
+          400,
+          650,
+          525,
+          900
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"c0f7aafb-31ad-45f6-9317-da032a4f9964\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c0f7aafb-31ad-45f6-9317-da032a4f9964\", [{\"mode\": \"markers\", \"name\": \"comedy show data\", \"x\": [200, 400, 300, 600], \"y\": [400, 700, 500, 900], \"type\": \"scatter\", \"uid\": \"6b59c3aa-ca12-11e9-818b-8b584f91532b\"}, {\"mode\": \"lines\", \"name\": \"starting line\", \"x\": [200, 400, 300, 600], \"y\": [400.0, 650.0, 525.0, 900.0], \"type\": \"scatter\", \"uid\": \"6b59c59e-ca12-11e9-818b-8b584f91532b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"c0f7aafb-31ad-45f6-9317-da032a4f9964\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c0f7aafb-31ad-45f6-9317-da032a4f9964\", [{\"mode\": \"markers\", \"name\": \"comedy show data\", \"x\": [200, 400, 300, 600], \"y\": [400, 700, 500, 900], \"type\": \"scatter\", \"uid\": \"6b59c3aa-ca12-11e9-818b-8b584f91532b\"}, {\"mode\": \"lines\", \"name\": \"starting line\", \"x\": [200, 400, 300, 600], \"y\": [400.0, 650.0, 525.0, 900.0], \"type\": \"scatter\", \"uid\": \"6b59c59e-ca12-11e9-818b-8b584f91532b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plot([comedy_show_trace, trace_show_line])"
    ]
